Font-End part complete

--- a/static/StaticPage/main-header.html
+++ b/static/StaticPage/main-header.html
@@ -62,7 +62,6 @@
     </nav>
 
     <!-- template -->
-    <script src="../../static/dist/js/template.js"></script>
     <script src="../../static/js/Message.js"></script>
 
 
@@ -98,7 +97,7 @@
           {{/each}}
           <!-- /.menu --> </li>
         <li class="footer">
-          <a>把所有通知标记为已读</a>
+          <a href="#" id="ReadMessage">把所有通知标记为已读</a>
         </li>
       </ul>
 
