--- a/static/StaticPage/main-sidebar.html
+++ b/static/StaticPage/main-sidebar.html
@@ -91,7 +91,7 @@
       </a>
     </li>
     <li id="sidebar-BBS">
-      <a href="../BBS">
+      <a href="../BBS?areaID=-1">
         <i class="fa fa-commenting-o"></i>
         <span>讨论区</span>
       </a>
