--- a/static/pages/CourseIntro.html
+++ b/static/pages/CourseIntro.html
@@ -115,13 +115,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <button type="button" onclick="UpImg.click()" class="btn btn-default">
             上传图片
             <i class="fa fa-arrow-circle-up"></i>
-            <input type="file" id="UpImg" onchange="uploadFile()" style="visibility: hidden; position: absolute;">
+            <input type="file" id="UpImg" style="visibility: hidden; position: absolute;">
           </button>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">关闭</button>
-        <button type="button" class="btn btn-primary">保存</button>
+        <button type="button" class="btn btn-primary" id="addCourseIntro">保存</button>
       </div>
     </div>
   </div>
