--- a/static/pages/Homework.html
+++ b/static/pages/Homework.html
@@ -58,7 +58,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <li>
             <a href="../HomeworkList">Homework List</a>
           </li>
-          <li class="active">Homework ID</li>
+          <li class="active">Homework</li>
         </ol>
       </section>
       <!-- Main content -->
@@ -177,7 +177,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <div class="col-md-2 pull-right">
       <button type="button" onclick="UpFile.click()" class="btn btn-block btn-success">
         上传作业
-        <input type="file" id="UpFile" onchange="uploadFile()" style="visibility: hidden; position: absolute;">
+        <input type="file" id="UpFile" style="visibility: hidden; position: absolute;">
       </button>
     </div>
     <div class="col-md-2 pull-right">
