--- a/static/StaticPage/ProfileModal.html
+++ b/static/StaticPage/ProfileModal.html
@@ -16,12 +16,12 @@
           <label for="ProfileAns">密保答案</label>
           <input id="ProfileAns" type="text" class="form-control" placeholder="">
           <label for="ProfilePass">修改密码</label>
-          <input id="ProfilePass"type="password" class="form-control" placeholder="">
+          <input id="ProfilePass" type="password" class="form-control" placeholder="">
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">关闭</button>
-        <button type="button" class="btn btn-primary">保存</button>
+        <button type="button" class="btn btn-primary" id="ChangeProfile">保存</button>
       </div>
     </div>
   </div>
