--- a/static/pages/ClassManage.html
+++ b/static/pages/ClassManage.html
@@ -33,26 +33,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<!--
-BODY TAG OPTIONS:
-=================
-Apply one or more of the following classes to get the
-desired effect
-|---------------------------------------------------------|
-| SKINS         | skin-blue                               |
-|               | skin-black                              |
-|               | skin-purple                             |
-|               | skin-yellow                             |
-|               | skin-red                                |
-|               | skin-green                              |
-|---------------------------------------------------------|
-|LAYOUT OPTIONS | fixed                                   |
-|               | layout-boxed                            |
-|               | layout-top-nav                          |
-|               | sidebar-collapse                        |
-|               | sidebar-mini                            |
-|---------------------------------------------------------|
--->
 
 <body class="hold-transition skin-blue sidebar-mini">
   <div class="wrapper">
@@ -133,15 +113,15 @@ desired effect
       </div>
       <div class="modal-body">
         <div class="form-group">
-          <label for="ClassName">课程名称</label>
-          <input id="ClassName" type="text" class="form-control" placeholder="">
+          <label for="CourseName">课程名称</label>
+          <input id="CourseName" type="text" class="form-control" placeholder="">
           <label for="ClassTime">课程时间</label>
-          <input id="ClassTime" type="text" class="form-control" placeholder="">
+          <input id="ClassTime" type="text" class="form-control" placeholder="周五 345">
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary">提交</button>
+        <button type="button" class="btn btn-primary" id="submitAddClass">提交</button>
       </div>
     </div>
   </div>
@@ -164,7 +144,7 @@ desired effect
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary">提交</button>
+        <button type="button" class="btn btn-primary" id="submitAddStudent">提交</button>
       </div>
     </div>
   </div>
@@ -181,13 +161,13 @@ desired effect
       </div>
       <div class="modal-body">
         <div class="form-group">
-          <label for="StudentID-delete">学生学号</label>
-          <input id="StudentID-delete" type="text" class="form-control" placeholder="">
+          <label for="Student-delete">删除学生信息</label>
+          <textarea id="Student-delete" rows="10" class="form-control" readonly="readonly"></textarea>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary">提交</button>
+        <button type="button" class="btn btn-primary" id="submitDeleteStudent">提交</button>
       </div>
     </div>
   </div>
@@ -205,12 +185,12 @@ desired effect
       <div class="modal-body">
         <div class="form-group">
           <label for="Group">组号</label>
-          <input id="Group" type="text" class="form-control" placeholder="">
+          <input id="Group" type="text" class="form-control" placeholder="Enter a number..." onkeyup="this.value=this.value.replace(/\D/g,'')">
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary">提交</button>
+        <button type="button" class="btn btn-primary" id="submitChangeGroup">提交</button>
       </div>
     </div>
   </div>
@@ -233,7 +213,7 @@ desired effect
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary">提交</button>
+        <button type="button" class="btn btn-primary" id="submitSendMessage">提交</button>
       </div>
     </div>
   </div>
@@ -256,14 +236,14 @@ desired effect
       <!-- /.box-header -->
       <div class="box-body">
         <ul class="products-list product-list-in-box">
-          {{each classList as asscl i}}
+          {{each classList as cla i}}
           <li class="item">
             <div class="product-img">
               <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
             <div class="product-info">
-              <a itype="{{asscl.classID}}" href="#" class="product-title" id="aaa">
-                {{asscl.className}}
-                <span class="product-description">{{asscl.teacherName}} {{asscl.classTime}}</span>
+              <a data-id="{{cla.classID}}" href="#" class="product-title" name="ClassLabel">
+                {{cla.className}}
+                <span class="product-description">{{cla.teacherName}} {{cla.classTime}}</span>
               </a>
             </div>
           </li>
@@ -281,7 +261,7 @@ desired effect
   <div class="col-md-12">
     <div class="box box-info">
       <div class="box-header with-border">
-        <h3 class="box-title">学生列表</h3>
+        <h3 class="box-title" id="stuList">学生列表</h3>
         <div class="box-tools pull-right">
           <button name="StudentPlus" type="button" class="btn btn-box-tool"> <i class="fa fa-plus-circle"></i>
           </button>
@@ -306,7 +286,7 @@ desired effect
             {{each studentList as student i}}
             <tr>
               <td>
-                <input type="checkbox" id="cb_{{student.studentID}}" name="sub">
+                <input type="checkbox" data-id="{{student.studentID}}" data-name="{{student.name}}" name="sub">
               </td>
               <td>{{student.studentID}}</td>
               <td>{{student.group}}</td>
