--- a/static/pages/HomeworkCheck.html
+++ b/static/pages/HomeworkCheck.html
@@ -117,7 +117,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <td>{{studentID}}</td>
               <td>{{studentName}}</td>
               <td>
-                <a href="srcUrl">{{srcName}}</a>
+                <a href="{{srcUrl}}">{{srcName}}</a>
               </td>
             </tr>
           </table>
@@ -151,7 +151,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <!-- <div class="row">
             -->
       <div class="col-md-2 pull-right">
-        <button itype="{{studentID}}" type="button" class="btn btn-block btn-primary">确认</button>
+        <button id="submitCheck" data-id="{{studentID}}" type="button" class="btn btn-block btn-primary">确认</button>
       </div>
       <br>
     </div>
