--- a/static/pages/TeacherIntro.html
+++ b/static/pages/TeacherIntro.html
@@ -31,26 +31,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<!--
-BODY TAG OPTIONS:
-=================
-Apply one or more of the following classes to get the
-desired effect
-|---------------------------------------------------------|
-| SKINS         | skin-blue                               |
-|               | skin-black                              |
-|               | skin-purple                             |
-|               | skin-yellow                             |
-|               | skin-red                                |
-|               | skin-green                              |
-|---------------------------------------------------------|
-|LAYOUT OPTIONS | fixed                                   |
-|               | layout-boxed                            |
-|               | layout-top-nav                          |
-|               | sidebar-collapse                        |
-|               | sidebar-mini                            |
-|---------------------------------------------------------|
--->
 
 <body class="hold-transition skin-blue sidebar-mini">
   <div class="wrapper">
@@ -117,21 +97,21 @@ desired effect
       </div>
       <div class="modal-body">
         <div class="form-group">
-          <label for="CourseName">老师名称</label>
-          <input id="CourseName" type="text" class="form-control" placeholder="">
-          <label for="CourseIntro">老师介绍</label>
-          <textarea id="CourseIntro" rows="10" class="form-control" placeholder=""></textarea>
+          <label for="TeacherName">老师名称</label>
+          <input id="TeacherName" type="text" class="form-control" placeholder="">
+          <label for="TeacherIntro">老师介绍</label>
+          <textarea id="TeacherIntro" rows="10" class="form-control" placeholder=""></textarea>
           <br>
           <button type="button" onclick="UpImg.click()" class="btn btn-default">
             上传图片
             <i class="fa fa-arrow-circle-up"></i>
-            <input type="file" id="UpImg" onchange="uploadFile()" style="visibility: hidden; position: absolute;">
+            <input type="file" id="UpImg" style="visibility: hidden; position: absolute;">
           </button>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">关闭</button>
-        <button type="button" class="btn btn-primary">保存</button>
+        <button type="button" class="btn btn-primary" id="addTeacherIntro">保存</button>
       </div>
     </div>
   </div>
