update api and main-header
main-header:
update "No Sliver Bullet"

--- a/static/StaticPage/main-header.html
+++ b/static/StaticPage/main-header.html
@@ -42,7 +42,7 @@
 
                 <p>
                   <font name="UserName"></font> - <font name="UserType"></font>
-                  <small>The purpose of software engineering is to control complexity, not to create it.</small>
+                  <small>No Sliver Bullet.</small>
                 </p>
               </li>
               <!-- Menu Footer-->    
