--- a/static/pages/forum.html
+++ b/static/pages/forum.html
@@ -4,6 +4,7 @@ This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" >
+  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../../static/set/dist/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
@@ -23,7 +24,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
         apply the skin class to the body tag so the changes take effect.
   -->
   <link rel="stylesheet" href="../../static/set/dist/css/skins/skin-blue.min.css">
-
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -34,44 +34,40 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 <body class="hold-transition skin-blue sidebar-mini">
   <div class="wrapper">
-
     <!-- Main Header -->
     <header class="main-header">
-      <!--load by js--> </header>
+      <!--load by js-->
+    </header>
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
-      <!--load by js--> </aside>
-
+      <!--load by js-->
+    </aside>
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
       <section class="content-header">
         <!-- load by js -->
       </section>
-
       <!-- Main content -->
       <section class="content">
-      <!-- load by js -->
+        <!-- load by js -->
       </section>
-      <!-- /.content --> </div>
+      <!-- /.content -->
+    </div>
     <!-- /.content-wrapper -->
-
     <!-- Main Footer -->
     <footer class="main-footer">
-      <!--load by js--> </footer>
-
+      <!--load by js-->
+    </footer>
   </div>
   <!-- ./wrapper -->
-
   <!-- REQUIRED JS SCRIPTS -->
-
   <!-- jQuery 2.2.3 -->
   <script src="../../static/set/plugins/jQuery/jquery-2.2.3.min.js"></script>
   <!-- Bootstrap 3.3.6 -->
   <script src="../../static/set/bootstrap/js/bootstrap.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../../static/set/dist/js/app.min.js"></script>
-
   <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. Slimscroll is required when using the
@@ -82,81 +78,73 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="../../static/dist/js/template.js"></script>
   <script src="../../static/js/forum.js"></script>
 </body>
+
 </html>
-
-
 <script id="main_template" type="text/html">
-<div class="row">
-
-  <div class="col-md-12">
-    {{each forumList as forum i}}
-    <div class="box box-solid">
-      <div class="box-header with-border"> <i class="fa fa-male"></i>
-        <a name="First"></a>
-        <h3 class="box-title">{{forum.userName}}</h3>
-        <div class="pull-right">
-          <small>{{forum.time}}</small>
-        </div>
-      </div>
-      <!-- /.box-header -->
-      <div class="box-body">
-        <h4>{{forum.content}}</h4>
-        {{if forum.url==""}}
-        {{else}}
-        <br>
-        <h5><a href="{{forum.url}}">附件</a></h5>
-        {{/if}}
-      </div>
-      <!-- /.box-body --> </div>
-    <!-- /.box -->
-    {{/each}}
-
-
-
-    <div class="box box-info">
-      <div class="box-header ui-sortable-handle" style="cursor: move;">
-        <i class="fa fa-envelope"></i>
-
-        <h3 class="box-title">回复帖子</h3>
-        <!-- tools box -->
-        <div class="pull-right box-tools"></div>
-        <!-- /. tools --> </div>
-      <form role="form">
-        <div class="box-body">
-          <div class="form-group">
-            <textarea class="form-control" rows="10" placeholder="Enter ..." id="ForumContent"></textarea>
+  <div class="row">
+    <div class="col-md-12">
+      {{each forumList as forum i}}
+      <div class="box box-solid">
+        <div class="box-header with-border"> <i class="fa fa-male"></i>
+          <a name="First"></a>
+          <h3 class="box-title">{{forum.userName}}</h3>
+          <div class="pull-right">
+            <small>{{forum.time}}</small>
           </div>
-
         </div>
-        <div class="box-footer clearfix">
-          <button type="button" class="pull-right btn btn-default" id="SubmitForum">
-            回复
-            <i class="fa fa-arrow-circle-right"></i>
-          </button>
-          <button type="button" onclick="UpFile.click()" class="pull-right btn btn-default" id="attachment">
-            上传附件
-            <i class="fa fa-arrow-circle-up"></i>
-            <input type="file" id="UpFile" style="visibility: hidden; position: absolute;">
-          </button>
+        <!-- /.box-header -->
+        <div class="box-body">
+          <h4>{{forum.content}}</h4> {{if forum.url==""}} {{else}}
+          <br>
+          <h5><a href="{{forum.url}}">附件</a></h5> {{/if}}
         </div>
-      </form>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
+      {{/each}}
+      <div class="box box-info">
+        <div class="box-header ui-sortable-handle" style="cursor: move;">
+          <i class="fa fa-envelope"></i>
+          <h3 class="box-title">回复帖子</h3>
+          <!-- tools box -->
+          <div class="pull-right box-tools"></div>
+          <!-- /. tools -->
+        </div>
+        <form role="form">
+          <div class="box-body">
+            <div class="form-group">
+              <textarea class="form-control" rows="10" placeholder="Enter ..." id="ForumContent"></textarea>
+            </div>
+          </div>
+          <div class="box-footer clearfix">
+            <button type="button" class="pull-right btn btn-default" id="SubmitForum">
+              回复
+              <i class="fa fa-arrow-circle-right"></i>
+            </button>
+            <button type="button" onclick="UpFile.click()" class="pull-right btn btn-default" id="attachment">
+              上传附件
+              <i class="fa fa-arrow-circle-up"></i>
+              <input type="file" id="UpFile" style="visibility: hidden; position: absolute;">
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
+    <!-- /.col-md-12 -->
   </div>
-  <!-- /.col-md-12 --> </div>
-<!-- ./row -->
+  <!-- ./row -->
 </script>
 
 <script id="title_template" type="text/html">
-<h1>{{forumsName}}</h1>
-<ol class="breadcrumb">
-  <li>
-    <a> <i class="fa fa-dashboard"></i>
-      Home
-    </a>
-  </li>
-  <li>
-    <a href="../BBS">BBS</a>
-  </li>
-  <li class="active">Forum</li>
-</ol>
+  <h1>帖子 <small>Forum</small></h1>
+  <ol class="breadcrumb">
+    <li>
+      <a> <i class="fa fa-dashboard"></i> Home
+      </a>
+    </li>
+    <li>
+      <a href="../BBS">BBS</a>
+    </li>
+    <li class="active">Forum</li>
+  </ol>
 </script>
