fixed homework system bugs

--- a/static/pages/Homework.html
+++ b/static/pages/Homework.html
@@ -181,7 +181,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
       </button>
     </div>
     <div class="col-md-2 pull-right">
-      <button href="{{url}}" type="button" class="btn btn-block btn-info">下载附件</button>
+      <a href="{{url}}">
+        <button type="button" class="btn btn-block btn-info">下载附件</button></a>
     </div>
     <br>
   </div>
