--- a/static/pages/Courseware.html
+++ b/static/pages/Courseware.html
@@ -145,10 +145,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   {{src.srcName}}
                   <div class="btn-group pull-right">
                   <a href="{{src.srcUrl}}" download="{{src.srcName}}">
-                    <button type="button" class="btn btn-default">下载</button></a>
-                    <a href="{{src.srcUrl}}">
+                    <button type="button" class="btn btn-default">下载</button>
+                  </a>
+                  <a href="{{src.srcUrl}}" target="view-window">
                     <button type="button" class="btn btn-default">预览</button>
-                    </a>  
+                  </a>
                   </div>
                 </a>
               </div>
